added pysqlite to requirements.txt

--- a/rag_langchain.ipynb
+++ b/rag_langchain.ipynb
@@ -11,8 +11,11 @@
     "# then manually install these modules:\n",
     "# pip install python-dotenv streamlit langchain langchain-core langchain-community langchain-openai langchain-anthropic chromadb==0.5.3 langchain-chroma docx2txt pypdf bs4 ipykernel\n",
     "\n",
+    "# to create requirements.txt file use pip freeze > requirements.txt\n",
     "# this command could be used to install other modules\n",
-    "# pip install -r requirements.txt --no-cache-dir\n"
+    "# pip install -r requirements.txt --no-cache-dir\n",
+    "\n",
+    "#manually add pysqlite3-binary to \n"
    ]
   },
   {
