--- a/rag_langchain.ipynb
+++ b/rag_langchain.ipynb
@@ -15,7 +15,8 @@
     "# this command could be used to install other modules\n",
     "# pip install -r requirements.txt --no-cache-dir\n",
     "\n",
-    "#manually add pysqlite3-binary to \n"
+    "#manually add pysqlite3-binary to \n",
+    "# had to set Azure web app \"Deployment Center\" settings and add .env variables to the Settings/Environment Variables tab"
    ]
   },
   {
