updated api version

--- a/rag_langchain.ipynb
+++ b/rag_langchain.ipynb
@@ -16,7 +16,8 @@
     "# pip install -r requirements.txt --no-cache-dir\n",
     "\n",
     "#manually add pysqlite3-binary to \n",
-    "# had to set Azure web app \"Deployment Center\" settings and add .env variables to the Settings/Environment Variables tab"
+    "# had to set Azure web app \"Deployment Center\" settings and add .env variables to the Settings/Environment Variables tab\n",
+    "#changed api version info to \"2024-05-01-preview\", # originally was \"2024-02-15-preview\", then tried \"2024-12-01-preview\""
    ]
   },
   {
